base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-app
  namespace: calculator
  labels:
    app: calculator
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: calculator
  template:
    metadata:
      labels:
        app: calculator
        version: v1
    spec:
      containers:
      - name: calculator
        image: urielgarciarj/cicd-images:calculator-dev-latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
      imagePullPolicy: Always
