base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-service
  namespace: calculator
  labels:
    app: calculator
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: calculator
